# buddhabrot

./: BBrotCompute.hs  BBrotConf.hs  BBrotRender.hs  BBrotSelection.hs  LICENSE  Makefile  README.md  buddhabrot.cabal  buddhabrot.hs  stack.yaml
